<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <!--group 标签加上id 该 组就会出现下划线-->
    <group android:checkableBehavior="single"
        android:id="@+id/group_one"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_normal_24dp"
            android:title="@string/page_home" />
        <item
            android:id="@+id/common_website"
            android:icon="@drawable/ic_common_website"
            android:title="@string/common_web" />
        <item
            android:id="@+id/collect_page"
            android:icon="@drawable/ic_own_collection"
            android:title="@string/own_collect" />
    </group>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/nav_todo"
        android:icon="@drawable/ic_todo"
        android:title="@string/todo_text" />
    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_clock_date"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_comments_solid"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
