<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_12"
    android:layout_marginTop="@dimen/dp_4"
    android:layout_marginEnd="@dimen/dp_12"
    android:layout_marginBottom="@dimen/dp_4"
    app:cardBackgroundColor="@color/viewBackground"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_3">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="@dimen/dp_10">
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加收藏网站"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/et_collection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/collection_name_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        />
    <EditText
        android:id="@+id/et_collection_author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/collection_author_hint"
        app:layout_constraintTop_toBottomOf="@id/et_collection_title"
        />
    <EditText
        android:id="@+id/et_collection_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="left|top"
        android:maxHeight="300dp"
        android:minHeight="173dp"
        android:hint="@string/collection_link_address_hint"
        app:layout_constraintTop_toBottomOf="@id/et_collection_author_name"
        />

    <Button
        android:id="@+id/btn_cancel_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/cancel_text"
        android:fontFamily="@font/calibri"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:background="@drawable/bt_login_bg"
        android:layout_marginEnd="@dimen/dp_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@id/et_collection_link" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/confirm_text"
        android:fontFamily="@font/calibri"
        android:layout_marginEnd="@dimen/dp_16"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/bt_login_bg"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp_5"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_collection_link" />
    <ImageView
        android:id="@+id/iv_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        app:srcCompat = "@drawable/ic_close_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>