<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/common_bar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColorHint="@color/font_hint"
        android:layout_marginTop="@dimen/dp_90"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_sign_up_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_user_solid"
            android:drawablePadding="16dp"
            android:fontFamily="@font/calibri"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/font_hint"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColorHint="@color/font_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_name">

        <EditText
            android:id="@+id/edit_user_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_lock_white_24dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/calibri"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/font_hint"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColorHint="@color/font_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password">

        <EditText
            android:id="@+id/edit_user_sign_up_repassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_lock_white_24dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/calibri"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/font_hint"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_sing_up_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_login_bg"
        android:fontFamily="@font/calibri"
        android:text="@string/signin_now"
        android:textAllCaps="false"
        android:layout_marginEnd="@dimen/dp_32"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_repassword"
        />

</android.support.constraint.ConstraintLayout>